# fort-tags

./: CMakeLists.txt  FortTagsConfig.cmake.in  LICENSE  README.md
cmake/: FetchApriltag.cmake
patch/: apriltag.patch  noopt.patch
src/: tag36ARTag.c
src/fort-tags/: CMakeLists.txt  fort-tags.h  tag36ARTag.h  tag36h10.c
src/fort/tags/: CMakeLists.txt  fort-tags.cpp  fort-tags.h  fort-tags.hpp  options.cpp  options.hpp  tag36ARTag.c  tag36h10.c
